Fixed syntax error

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -1,7 +1,7 @@
 # This dockerfile is used for development.
 
 # Use TF 2.5 as base image with GPU support
-tensorflow/tensorflow:2.4.1-gpu
+FROM tensorflow/tensorflow:2.4.1-gpu
 
 # Set working directory to text-classifier
 WORKDIR /text-classifier
