--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,9 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# TFX metadata
+tfx_metadata/
+
+# TFX Pipeline Output
+tfx_pipeline_output/
