--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install flake8
         run: pip install flake8
       - name: Run flake8 
-        - uses: suo/flake8-github-action@releases/v1
-        - with:
+        uses: suo/flake8-github-action@releases/v1
+        with:
           checkName: 'flake8_py3'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
